[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["repl.it user <replituser@example.com>"]
description = ""
name = "pythonlearning"
version = "0.1.0"
[tool.poetry.dependencies]
pyperclip = "^1.8"
python = "^3.7"
[tool.poetry.dev-dependencies]
